--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,10 @@
 .card {
   padding: 2em;
 }
-
+.app-container {
+  display: flex;
+  justify-content: space-evenly;
+}
 @media screen and (max-width: 768px) {
   #root {
     min-width: 350px;
