--- a/src/PortfolioComponents/AboutMe.css
+++ b/src/PortfolioComponents/AboutMe.css
@@ -1,6 +1,3 @@
-.font {
-  font-family: "Questrial", sans-serif;
-}
 .about-me-container {
   display: flex;
   flex-direction: row;
@@ -52,7 +49,7 @@
     column-gap: 5em;
     align-items: center;
     margin-top: 10px;
-    border: solid black;
+
     min-width: 350px;
   }
   .left-container {
@@ -69,11 +66,11 @@
     font-size: 38px;
   }
   .my-title {
-    font-size: 20px;
+    font-size: 25px;
   }
   .my-summary {
-    font-size: 14px;
-    background-color: bisque;
+    font-size: 20px;
     padding: 15px;
+    margin: 15px;
   }
 }
