--- a/src/PortfolioComponents/NavBar.css
+++ b/src/PortfolioComponents/NavBar.css
@@ -6,7 +6,7 @@
   column-gap: 5em;
   padding: 10px;
   text-align: center;
-  background-color: blue;
+  /* background-color: blue; */
 }
 .button-container {
   display: flex;
