--- a/src/PortfolioComponents/ProjectDetails.css
+++ b/src/PortfolioComponents/ProjectDetails.css
@@ -2,3 +2,9 @@
   width: 70px;
   height: 60px;
 }
+.project-details {
+  display: flex;
+  flex-direction: row;
+  column-gap: 20px;
+  align-items: center;
+}
