RESLOVED #25 - Displayed the Porjects that were used per tech stack tool, anchored the websites too.

--- a/src/PortfolioComponents/TechProfile.css
+++ b/src/PortfolioComponents/TechProfile.css
@@ -51,7 +51,9 @@
 .yellow-star {
   color: gold;
 }
-
+.projects-list {
+  font-size: 20px;
+}
 @media screen and (max-width: 768px) {
   .pop-up-container {
     display: flex;
