Refactoring of landing page, removed resume section in the landing page, leaving resume as a tab option

--- a/src/PortfolioComponents/TechProfile.css
+++ b/src/PortfolioComponents/TechProfile.css
@@ -25,6 +25,8 @@
   flex-direction: column;
   align-items: center;
   margin-top: 100px;
+  padding: 10px;
+  margin: 10px;
 }
 .tool-name {
   font-size: 40px;
