--- a/src/PortfolioComponents/Home.css
+++ b/src/PortfolioComponents/Home.css
@@ -4,3 +4,11 @@
   row-gap: 7em;
   min-height: 70em;
 }
+.section {
+  min-height: 100vh; /* Full viewport height */
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+}
