--- a/src/PortfolioComponents/NavBar.css
+++ b/src/PortfolioComponents/NavBar.css
@@ -5,6 +5,7 @@
   justify-content: space-between;
   column-gap: 5em;
   padding: 10px;
+  margin: 10px;
   text-align: center;
   /* background-color: blue; */
 }
@@ -31,7 +32,6 @@
   .burger-button-container {
     display: flex;
     flex-direction: column;
-    padding-right: 3em;
   }
   .hamburger {
     display: block;
